from sqlalchemy import String
from sqlalchemy.orm import Mapped, mapped_column

from app.models.base_model import Base


class Permission(Base):
    __tablename__ = "permisos"

    id: Mapped[int] = mapped_column(primary_key=True, autoincrement=True)
    nombre: Mapped[str] = mapped_column(String(80), nullable=False, unique=True, index=True)
    descripcion: Mapped[str | None] = mapped_column(String(255), nullable=True)
