Project MesaAppBack {
  database_type: "PostgreSQL"
  Note: "Modelo corregido para SQLAlchemy y Alembic"
}

Enum mesa_estado {
  DISPONIBLE
  OCUPADA
  RESERVADA
  MANTENIMIENTO
}

Enum reserva_estado {
  ACTIVA
  CANCELADA
  FINALIZADA
}

Enum pedido_estado {
  PENDIENTE
  EN_PREPARACION
  LISTO
  ENTREGADO
  PAGADO
  CANCELADO
}

Enum pedido_tipo {
  MESA
  DOMICILIO
}

Enum metodo_pago {
  EFECTIVO
  TARJETA
  TRANSFERENCIA
  QR
}

Enum tipo_movimiento_inventario {
  ENTRADA
  SALIDA
  AJUSTE
}

Table tiendas {
  id bigint [pk, increment]
  nombre varchar(120) [not null]
  slug varchar(120) [not null, unique]
  nit varchar(40) [unique]
  telefono varchar(30)
  correo varchar(120)
  direccion varchar(255)
  ciudad varchar(80)
  pais varchar(80) [not null, default: 'CO']
  activo boolean [not null, default: true]
  creado_en timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]
}

Table configuraciones_app {
  id bigint [pk, increment]
  clave varchar(100) [not null, unique]
  valor text
  tipo_valor varchar(20) [not null, default: 'string']
  descripcion varchar(255)
  editable boolean [not null, default: true]
  actualizado_por_usuario_id bigint [ref: > usuarios.id]
  actualizado_en timestamptz [not null, default: `now()`]
}

Table configuraciones_tienda {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  clave varchar(100) [not null]
  valor text
  tipo_valor varchar(20) [not null, default: 'string']
  descripcion varchar(255)
  editable boolean [not null, default: true]
  actualizado_por_usuario_id bigint [ref: > usuarios.id]
  actualizado_en timestamptz [not null, default: `now()`]

  indexes {
    (tienda_id, clave) [unique]
  }
}

Table usuarios {
  id bigint [pk, increment]
  nombre varchar(120) [not null]
  cedula varchar(30) [not null, unique]
  celular varchar(30) [unique]
  correo varchar(120) [not null, unique]
  password_hash varchar(255) [not null]
  direccion varchar(255)
  fecha_nacimiento date
  activo boolean [not null, default: true]
  creado_en timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]
}

Table roles {
  id bigint [pk, increment]
  nombre varchar(50) [not null, unique]
  descripcion varchar(255)
  creado_en timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]
}

Table permisos {
  id bigint [pk, increment]
  nombre varchar(80) [not null, unique]
  descripcion varchar(255)
}

Table rol_permiso {
  id bigint [pk, increment]
  rol_id bigint [not null, ref: > roles.id]
  permiso_id bigint [not null, ref: > permisos.id]

  indexes {
    (rol_id, permiso_id) [unique]
  }
}

Table usuario_rol {
  id bigint [pk, increment]
  usuario_id bigint [not null, ref: > usuarios.id]
  rol_id bigint [not null, ref: > roles.id]
  tienda_id bigint [not null, ref: > tiendas.id]
  salario numeric(12,2)
  fecha_contrato date
  fecha_inicio date [not null, default: `current_date`]
  fecha_fin date
  activo boolean [not null, default: true]

  indexes {
    (usuario_id, rol_id, tienda_id, fecha_inicio) [unique]
  }

  Note: "salario >= 0 y fecha_fin >= fecha_inicio por check en SQL"
}

Table categorias {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  nombre varchar(80) [not null]
  descripcion varchar(255)
  activo boolean [not null, default: true]

  indexes {
    (tienda_id, nombre) [unique]
  }
}

Table productos {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  nombre varchar(120) [not null]
  descripcion text
  precio numeric(12,2) [not null]
  categoria_id bigint [not null, ref: > categorias.id]
  img_url text
  activo boolean [not null, default: true]
  stock numeric(12,3) [not null, default: 0]
  stock_minimo numeric(12,3) [not null, default: 0]
  usa_receta boolean [not null, default: false]
  creado_en timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]

  indexes {
    (tienda_id, nombre) [unique]
  }

  Note: "precio > 0, stock >= 0, stock_minimo >= 0 por check en SQL"
}

Table materiales {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  nombre varchar(120) [not null]
  unidad varchar(20) [not null]
  stock numeric(12,3) [not null, default: 0]
  stock_minimo numeric(12,3) [not null, default: 0]
  creado_en timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]

  indexes {
    (tienda_id, nombre) [unique]
  }

  Note: "stock >= 0 y stock_minimo >= 0 por check en SQL"
}

Table producto_material {
  id bigint [pk, increment]
  producto_id bigint [not null, ref: > productos.id]
  material_id bigint [not null, ref: > materiales.id]
  cantidad numeric(12,3) [not null]

  indexes {
    (producto_id, material_id) [unique]
  }

  Note: "cantidad > 0 por check en SQL"
}

Table mesas {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  numero int [not null]
  capacidad_minima int [not null]
  capacidad_maxima int [not null]
  estado mesa_estado [not null, default: 'DISPONIBLE']
  activo boolean [not null, default: true]
  creado_en timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]

  indexes {
    (tienda_id, numero) [unique]
  }

  Note: "capacidad_minima > 0 y capacidad_maxima >= capacidad_minima por check en SQL"
}

Table reservas {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  mesa_id bigint [not null, ref: > mesas.id]
  nombre_cliente varchar(120) [not null]
  fecha_hora_inicio timestamptz [not null]
  fecha_hora_fin timestamptz [not null]
  estado reserva_estado [not null, default: 'ACTIVA']
  creado_por_usuario_id bigint [ref: > usuarios.id]
  creado_en timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]

  Note: "fecha_hora_fin > fecha_hora_inicio por check en SQL"
}

Table pedidos {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  mesa_id bigint [ref: > mesas.id]
  tipo pedido_tipo [not null]
  estado pedido_estado [not null, default: 'PENDIENTE']
  subtotal numeric(12,2) [not null, default: 0]
  impuesto numeric(12,2) [not null, default: 0]
  descuento numeric(12,2) [not null, default: 0]
  total numeric(12,2) [not null, default: 0]
  notas text
  creado_por_usuario_id bigint [ref: > usuarios.id]
  fecha_creacion timestamptz [not null, default: `now()`]
  actualizado_en timestamptz [not null, default: `now()`]

  Note: "montos >= 0 por check en SQL"
}

Table detalle_pedido {
  id bigint [pk, increment]
  pedido_id bigint [not null, ref: > pedidos.id]
  producto_id bigint [not null, ref: > productos.id]
  cantidad numeric(12,3) [not null]
  precio_unitario numeric(12,2) [not null]
  subtotal_linea numeric(12,2) [not null]

  indexes {
    (pedido_id, producto_id) [unique]
  }

  Note: "cantidad > 0, precio_unitario >= 0, subtotal_linea >= 0 por check en SQL"
}

Table pagos {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  pedido_id bigint [not null, ref: > pedidos.id]
  monto numeric(12,2) [not null]
  metodo_pago metodo_pago [not null]
  referencia_externa varchar(120)
  fecha timestamptz [not null, default: `now()`]
  creado_por_usuario_id bigint [ref: > usuarios.id]

  Note: "monto > 0 por check en SQL"
}

Table movimientos_inventario {
  id bigint [pk, increment]
  tienda_id bigint [not null, ref: > tiendas.id]
  material_id bigint [ref: > materiales.id]
  producto_id bigint [ref: > productos.id]
  tipo_movimiento tipo_movimiento_inventario [not null]
  cantidad numeric(12,3) [not null]
  motivo varchar(255)
  creado_por_usuario_id bigint [ref: > usuarios.id]
  creado_en timestamptz [not null, default: `now()`]

  Note: "cantidad > 0 y al menos uno entre material_id o producto_id por check en SQL"
}